[package]
name = "ham-core"
version = "0.5.1"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2021"

[dependencies]
encoding = "0.2.33"
glob = "0.3.0"

# <https://github.com/gluon-lang/lsp-types>
lsp-types = { version = "0.91.0" }

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simplelog = "0.7.6"

# ログ出力 API の基本になるもの。
# <https://github.com/rust-lang/log>
log = "0.4.14"

# テキスト上の位置を表現するもの。(リリースされていない。)
# <https://github.com/vain0x/text-position-rs>
text-position-rs = { version = "0.3.0", git = "https://github.com/vain0x/text-position-rs", rev = "6a63f748d68c4f4a35ef43a82442741464d8e25c" }

[dev-dependencies]
# スナップショットテスト <https://github.com/rust-analyzer/expect-test>
expect-test = { version = "1.1.0", git = "https://github.com/rust-analyzer/expect-test.git", rev = "f174815" }
