[package]
name = "hsp3-debug-adapter"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2021"
build = "src/build.rs"

[build-dependencies]
bindgen = "0"

[dependencies]
shared = { path = "../shared" }

# shift_jis との変換のため
# https://github.com/lifthrasiir/rust-encoding
encoding = "0.2"

# For logging with stdio
# https://github.com/rust-cli/env_logger/
env_logger = { version = "0.10.0", default-features = false }

# For logging macros (info!() etc.)
# <https://github.com/rust-lang/log>
log = "0.4.17"

# (用途不明)
libc = "0"

# アダプタープロセスと接続する名前付きパイプのため
# <https://github.com/blackbeam/named_pipe>
named_pipe = "0.4.1"

# For JSON conversion
# <https://github.com/serde-rs/serde>
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Win32 API
# (stringapiset: for MultibyteToWideChar etc.)
winapi = { version = "0", features = ["stringapiset", "winuser"] }

[lib]
crate-type = ["cdylib"]
